test/vm/errors/parser/selective_import_no_from.ach
// Parser error: missing `from` keyword
// Expected: parse error "expected `from`"

import { add } "../../modules/utils.ach"
